--- a/fancycamera/build.gradle
+++ b/fancycamera/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.novoda.bintray-release'
 ext {
     PUBLISH_GROUP_ID = 'co.fitcom'
     PUBLISH_ARTIFACT_ID = 'fancycamera'
-    PUBLISH_VERSION = '1.2.2'
+    PUBLISH_VERSION = '1.2.2-wik'
 }
 
 android {
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.googlecode.mp4parser:isoparser:1.0.2'
     implementation "androidx.appcompat:appcompat:1.0.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
@@ -42,7 +43,7 @@ publish {
     userOrg = 'triniwiz'
     groupId = 'co.fitcom'
     artifactId = 'fancycamera'
-    publishVersion = '1.2.2'
+    publishVersion = '1.2.2-wik'
     desc = ''
     website = ''
 }
